style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    outline: none;
    border: none;
    text-decoration: none;
}

.navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 8rem;
    background-color: black;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1000;
}

.navbar .side-navbar{
    color: #fff;
    margin: 0 .5rem;
}

.navbar .nav-logo{
    color: #fff;
    font-size: 2.5rem;
}

.navbar-anchors{
    display: flex;
    gap: 2.5rem;
    margin-left: auto;
}

.navbar-anchors a{
    color: #fff;
    display: inline-block;
    font-size: 17px;
    margin: 0 0.2rem;
}

#hamburger-menu{
    display: none;
}

@media (max-width: 768px) {
    #hamburger-menu {
        display: inline-block;
        color: #fff;
        font-size: 27px;
    }

    .navbar .navbar-anchors{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        position: absolute;
        top: 100%;
        right: -100%;
        background: black;
        width: 20rem;
        height: 100vh;
        transition: 0.5s linear;
    }

    .navbar .navbar-anchors a{
        display: block;
        margin-top: 1rem;
        text-align: center;
    }

    .navbar .navbar-anchors.active{
        right: 0;
    }
}

